k8s/todo-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-service
  template:
    metadata:
      labels:
        app: todo-service
    spec:
      containers:
        - name: todo-service
          image: elialombardi/todo-service:latest
