k8s/projects-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: projects-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: projects-service
  template:
    metadata:
      labels:
        app: projects-service
    spec:
      containers:
        - name: projects-service
          image: elialombardi/projectsservice:latest
---
apiVersion: v1
kind: Service
metadata:
  name: projects-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: projects-service
  ports:
    - name: projects-service
      protocol: TCP
      port: 80
      targetPort: 80
