k8s/todo-np-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: todonpservice-srv
spec:
  type: NodePort
  selector:
    app: todo-service
  ports:
    - name: todo-service
      protocol: TCP
      port: 80
      targetPort: 80
