k8s/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
    - host: net-microservices.local
      http:
        paths:
          - path: /api/todo-items
            pathType: Prefix
            backend:
              service:
                name: todonpservice-srv
                port:
                  number: 80
          - path: /api/p/todo-items
            pathType: Prefix
            backend:
              service:
                name: projects-clusterip-srv
                port:
                  number: 80
          - path: /api/projects
            pathType: Prefix
            backend:
              service:
                name: projects-clusterip-srv
                port:
                  number: 80
